# pyvista-fastapi-webapp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
frontend/: README.md  next.config.mjs  package.json
frontend/app/: layout.tsx
frontend/components/: FileLoader.tsx  ModalProgress.tsx  Viewer.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/utils/: backendUrl.ts
pyvista_webapp/: __init__.py  _version.py  cli.py  main.py
pyvista_webapp/frontend/: 404.html  index.html
pyvista_webapp/frontend/_next/static/6S2hn0aR5kTgUO82Yeq77/: _buildManifest.js
pyvista_webapp/frontend/_next/static/OA5G68RgFVWlAxdyrEt6q/: _buildManifest.js
pyvista_webapp/frontend/_next/static/chunks/: 577-9c6c94a7ed1d3f9c.js  724-7a5a533ccf43ea53.js  91794568-4992713b9df7e793.js  fb7d5399-039a9e30efab0598.js  framework-ae2441fd4da747e9.js  main-app-76607319e51df5a0.js  main-f87652ede496cf63.js  webpack-e83274f7e6b679ab.js  webpack-f3208a21da9deb9a.js
pyvista_webapp/frontend/_next/static/chunks/pages/: _app-2a8869810cf92668.js  index-692011aed255e8da.js  index-a75c9b22398ef87a.js  index-fae84bd0504402e8.js
pyvista_webapp/frontend/_next/static/css/: d8129e34138e9a19.css
pyvista_webapp/frontend/_next/static/m0keoBvZuux-g9dXSMmeB/: _buildManifest.js
tests/: conftest.py  test_main.py
