[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyvista-webapp"
authors = [
        {name = "Alex Kaszynski", email = "akascap@gmail.com"},
]
description = "PyVista web application using FastAPI, React, and Next.js."
home-page = "https://github.com/pyvista/pyvista-demo-webapp"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
description-file = "README.md"
dynamic = ["version"]
license = {file = "LICENSE"}
dependencies = [
    "aiofiles==23.2.1",
    "click",
    "fast-simplification==0.1.6",
    "fastapi[all]==0.109.0",
    "pytetwild>=0.1.dev1",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "streaming_form_data==1.13.0",
    "uvicorn==0.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pre-commit",
]

[project.scripts]
pyvista_webapp = "pyvista_webapp.cli:cli"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.ruff]
target-version = 'py310'
line-length = 100
indent-width = 4
ignore = []

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::FutureWarning',
    'ignore::PendingDeprecationWarning',
    'ignore::DeprecationWarning',
    'ignore::UserWarning'
]
testpaths = 'tests'

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.ply,*.vtk,*.vti,*.vtu,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,doc/_build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/examples/*,*.mypy_cache/*,*cover,*pyvista_webapp/frontend/_next/static/chunks/*,frontend/yarn.lock'
quiet-level = 3
